--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -29,8 +29,13 @@ section {
   background-color: #f8f0fb;
 }
 
-img {
-  border: 5px solid #8075ff;
+section.introduction {
+  background-color: white;
+}
+
+p{
+  line-height: 1.6;
+  letter-spacing: 1px;
 }
 
 h1,
@@ -39,7 +44,7 @@ h3,
 h4,
 h5 {
   /*Purple*/
-  color: #6320ee;
+  color: #987ecc;
   margin-bottom: 1em;
 }
 
@@ -85,7 +90,7 @@ footer {
   border-radius: 50%;
   display: inline-block;
   position: fixed;
-  bottom: 20px;
+  top: 20px;
   right: 20px;
 
   display: flex;
@@ -105,12 +110,9 @@ footer {
 
 .image-container img {
   vertical-align: top;
-  border: 5px solid #747c92;
+  border: 5px solid #0b3c49;
 }
 
-.image-container img:first-of-type {
-  vertical-align: bottom;
-}
 
 .tigers {
   background-color: #0b3c49;
@@ -118,12 +120,21 @@ footer {
 }
 
 .giraffe {
-  background-color: #465775;
-  color: #56e39f;
+  background-color: #483C46;
+  color: #BEEE62;
 }
 
 .giraffe h2 {
-  color: #ef6f6c;
+  color: #F4743B;
+}
+
+.giraffe p:first-of-type {
+  color: #F4743B;
+  font-size: 125%;
+}
+
+.news h2{
+  text-align: center;
 }
 
 .card {
@@ -173,6 +184,17 @@ footer {
   margin-bottom: 1em;
 }
 
+.education button{
+  border-radius: 10px;
+  font-size: 130%;
+  
+}
+
+.education button:hover, .education button:focus{
+  background-color: #946d61;
+  
+}
+
 /*Membership*/
 
 .membership {
@@ -188,8 +210,12 @@ footer {
   color: #ff7f11;
 }
 
+.membership p{
+  max-width: 700px;
+  margin: auto;
+}
 /*Programs*/
 
 .programs .card {
-  display: block;
+  display: inline-block;
 }
