--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -92,7 +92,7 @@ footer {
   position: fixed;
   top: 20px;
   right: 20px;
-
+  transition: 0.8s;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -117,6 +117,11 @@ footer {
 .tigers {
   background-color: #0b3c49;
   color: #f0e100;
+}
+
+.dolphin {
+  background-color: #2c1579;
+  color: #f0ecb4;
 }
 
 .giraffe {
