--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -33,8 +33,8 @@ section.introduction {
   background-color: white;
 }
 
-p{
-  line-height: 1.6;
+p, li{
+  line-height: 1.6em;
   letter-spacing: 1px;
 }
 
@@ -81,6 +81,7 @@ footer {
 }
 
 .introduction {
+  background-color: white;
 }
 
 #badge {
@@ -111,8 +112,18 @@ footer {
 .image-container img {
   vertical-align: top;
   border: 5px solid #0b3c49;
+  margin: 1em;
 }
 
+.image-container img:first-of-type {
+  vertical-align: top;
+  border: 5px solid #552543;
+}
+
+.image-container img:last-of-type {
+  vertical-align: top;
+  border: 5px solid #25552b;
+}
 
 .tigers {
   background-color: #0b3c49;
