--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -197,6 +197,7 @@ footer {
   background-color: rgba(255, 255, 255, 0.75);
   padding: 50px;
   max-width: 400px;
+  border-radius: 60px;
 }
 
 .education-container h3,
